--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     
     <application
-        android:label="doctor_app"
+        android:label="Doc-Pharma"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
