--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   emoji_picker_flutter: ^2.1.0
   path_provider: ^2.1.2
   shared_preferences: ^2.2.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
