--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   path_provider: ^2.1.2
   shared_preferences: ^2.2.2
   flutter_rating_bar: ^4.0.1
+  geolocator: ^11.0.0
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
