--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   geolocator: ^11.0.0
   geocoding: ^3.0.0
+  flutter_popup: ^3.3.0
 
 dev_dependencies:
   flutter_test:
