--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   geolocator: ^11.0.0
   geocoding: ^3.0.0
   flutter_popup: ^3.3.0
+  flutter_swiper_view: ^1.1.8
 
 dev_dependencies:
   flutter_test:
