--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   geocoding: ^3.0.0
   flutter_popup: ^3.3.0
   flutter_swiper_view: ^1.1.8
+  load_switch: ^2.1.0
 
 dev_dependencies:
   flutter_test:
