--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   flutter_popup: ^3.3.0
   flutter_swiper_view: ^1.1.8
   load_switch: ^2.1.0
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
