--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   flutter_swiper_view: ^1.1.8
   load_switch: ^2.1.0
   url_launcher: ^6.2.5
+  flutter_contacts: ^1.1.7+1
 
 dev_dependencies:
   flutter_test:
